# ESP32-S3-Touch-LCD-2.8_WH

Backup/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h
Backup/ui/src/fonts/: ui_font_Font1.c  ui_font_Font20.c  ui_font_Font60b.c  ui_font_Thaifont50.c  ui_font_ThaifontNoto20.c
Backup/ui/src/images/: ui_img_image_imageworning_1_png.c  ui_img_image_logopromtpay_png.c
Backup/ui/src/screens/: ui_MainPage.c  ui_WorckingPage1.c
Backup/ui_1/src/: ui.c  ui.h
Backup/ui_1/src/fonts/: ui_font_Font60.c
Backup/ui_1/src/images/: ui_img_image_logopayment_png.c  ui_img_image_rectangle_png.c  ui_img_image_tank__png.c
Backup/ui_1/src/screens/: ui_MainPage.c  ui_WorckingPage1.c
ESP32-S3-Touch-LCD-2.8_WH/: platformio.ini
ESP32-S3-Touch-LCD-2.8_WH/src/: LVGL_Music.cpp  main.cpp
GUI_squareLine/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
GUI_squareLine/NewUI/SquareLine_Project/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h
GUI_squareLine/NewUI/SquareLine_Project/libraries/ui/src/images/: ui_img_image_admin_png.c  ui_img_image_imageworning_1_copy_png.c  ui_img_image_mqtt_connect_png.c
GUI_squareLine/NewUI/SquareLine_Project/libraries/ui/src/screens/: ui_MainPage.c  ui_WorckingPage1.c
GUI_squareLine/assets/font/: ui_font_Font1.fcfg  ui_font_Font20.fcfg  ui_font_Font30.fcfg  ui_font_Font30item.fcfg  ui_font_Font36item.fcfg  ui_font_Font40item.fcfg  ui_font_Font50.c  ui_font_Font50.fcfg  ui_font_Font60.fcfg  ui_font_Font60b.fcfg  ui_font_Thaifont50.fcfg  ui_font_ThaifontNoto20.fcfg
(+43 files in other folders)
